<resources>
    <string name="app_name">Patrulla Ambiental</string>
    <string name="app_name_spaced">Patrulla Ambiental</string>
    <!-- Strings used for fragments for navigation -->
    <string name="inicioSes">INICIAR SESIÓN</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="registrarme">Registrarme</string>
    <string name="bienve">Bienvenido</string>

    <string name="err_500">Algo salió mal, intentalo nuevamente</string>
    <string name="error_login">El usuario y/o contraseña no son correctos</string>
    <string name="error_name">Usuario no encontrado</string>
    <string name="error_pass">Contraseña incorrecta</string>
    <string name="error_confirm_pass">Las contraseñas no coinciden</string>
    <string name="empty_login">Rellena todos los campos primero</string>

    <string name="item1">Inicio</string>
    <string name="item2">Mensajes</string>
    <string name="item3">Mapa</string>
    <string name="item4">Noticias</string>

    <string name="itemTop1">Mi perfil</string>
    <string name="itemTop2">Ajustes</string>
    <string name="itemTop3">Cerrar sesión</string>

    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo Electrónico</string>
    <string name="camFoto">Cambiar foto</string>

    <string name="miPer">Mi perfil</string>

    <string name="detallesReg">Detalles de registro</string>
    <string name="confirmReg">Confirmar contraseña</string>
    <string name="recordarReg">Recordarme</string>
    <string name="inicioReg">¡REGISTRATE!</string>

    <string name="hola_hint">BIENVENIDO USERNAME</string>

    <string name="main_menu_1">Nuevo Reporte</string>
    <string name="main_menu_2">Mis Reportes</string>
    <string name="main_menu_3">Reglamento ambiental</string>
    <string name="main_menu_4">Evidencias</string>
    <string name="main_menu_5">Boletín UTEZ</string>
    <string name="main_menu_6">Educación ambiental</string>

    <string name="noInternet">¡No hay conexión a internet, intentalo nuevamente!</string>
    <string name="reintenta">Reintentar</string>

    <string name="logut_pregunta">¿Cerrar sesión?</string>
    <string name="logut_body">Estas a punto de cerrar sesión, \n ¿Deseas continuar?</string>

    <string name="put_pregunta">¡Confirmar cambios!</string>
    <string name="put_body">¿Deseas actualizar tu información?</string>

    <string name="no_wifi">¡Se ha perdido la conexión a internet!</string>
    <string name="si_wifi">¡Se ha restaurado la conexión a internet!</string>

    <string name="no_reports">¡No hay reportes disponibles!</string>

    <string name="si">Si</string>
    <string name="no">No</string>

    <string name="settingsTitle">Configuración</string>
    <string name="temas">Apariencia y Tema</string>
    <string name="temaClaro">Claro</string>
    <string name="temaOscuro">Modo oscuro</string>
    <string name="lenguajes">Idiomas</string>
    <string name="lenguajeEsp">Español</string>
    <string name="lenguajeEng">Inglés</string>
    <string name="lenguajeFre">Francés</string>

    <string name="newPass">Cambiar mi contraseña</string>
    <string name="newPassText">Nueva contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="succesSave">¡Contraseña actualizada!</string>
    <string name="preferences">Preferencias</string>
    <string name="ringtone">Establecer tono de notificación</string>

    <string name="camaraPregunta">Nueva foto de perfil</string>
    <string name="cam">Camara</string>
    <string name="gal">Galería</string>

    <string name="no_nums">No se admiten números</string>
    <string name="exito_registro">Registro exitoso</string>
    <string name="exito_put">Actualización exitosa</string>
    <string name="error_registro">Error al registrar:</string>

    <string name="mnu_reps">Mis reportes</string>
    <string name="del_rep">¿Eliminar este reporte?</string>
    <string name="del_exito">Reporte eliminado</string>
    <string name="del_fallo">Reporte no eliminado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>