<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackgroundFloating"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/txtPerfil3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/settingsTitle"
        android:textColor="?attr/colorOnBackground"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnSalir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toStartOf="@+id/txtPerfil3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24_on_back" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            style="@style/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temas"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Opciones de Messages -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temaOscuro"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="?attr/colorSurface"
                android:thumbTint="?attr/colorSurface"
                android:trackTint="?attr/colorOnSurface" />
        </LinearLayout>

        <!-- Más opciones de Messages aquí -->

        <TextView
            android:id="@+id/textView3"
            style="@style/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lenguajes"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radGru"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/rbEs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lenguajeEsp" />

                <RadioButton
                    android:id="@+id/rbEn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lenguajeEng" />

                <RadioButton
                    android:id="@+id/rbFr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lenguajeFre" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#CCCCCC" />

        <TextView
            style="@style/font_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/newPassText"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Opciones de Sync -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCambiarContra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="all"
                android:text="@string/newPass"
                android:textColorLink="?attr/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>

        <!-- Más opciones de Sync aquí -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>