<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Círculo superior derecho -->
        <View
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="-80dp"
            android:background="@drawable/circulos"
            android:foregroundTint="#000000" />

        <!-- Círculo inferior izquierdo -->
        <View
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-80dp"
            android:layout_marginBottom="-100dp"
            android:background="@drawable/circulos" />

        <!-- Otros elementos de la interfaz -->
        <!-- ... -->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/inicioSes"
            android:textColor="?attr/colorOnBackground"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/logo_app_sf" />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="?attr/colorAccent"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawableTint="?attr/colorAccent"
            android:drawableTintMode="multiply"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="text|textEmailAddress"
            android:selectAllOnFocus="false"
            android:singleLine="false" />

        <EditText
            android:id="@+id/edtContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="?attr/colorAccent"
            android:drawableStart="@drawable/baseline_lock_person_24"
            android:drawableTint="?attr/colorAccent"
            android:drawableTintMode="multiply"
            android:ems="10"
            android:hint="@string/contra"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnAcceder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/acceder" />

        <TextView
            android:id="@+id/linkSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/registrarme"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>