<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiPerfil">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar2"
        style="@style/downMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorOnPrimary" />

    <TextView
        android:id="@+id/txtPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/miPer"
        android:textColor="@color/colorOnPrimary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/my_toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foregroundGravity="fill_horizontal|top|left|bottom|center_vertical|clip_horizontal|center|fill_vertical|clip_vertical|right|center_horizontal|fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar2"
        app:layout_constraintVertical_bias="0.20999998">

        <LinearLayout
            android:id="@+id/linearLayout"
            style="val animation = AnimationUtils.loadAnimation(requireActivity(), R.anim.entrada_cards)"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar2"
            app:layout_constraintVertical_bias="0.100000024">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="false"
                android:background="@drawable/perfil_default"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImgView" />

            <TextView
                android:id="@+id/btnCambiaFoto"
                style="@style/font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/camFoto"
                android:textColor="?attr/colorOnBackground"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNombre"
                style="@style/font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/colorAccentNight"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:drawableTint="@color/colorAccentNight"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtApellido"
                style="@style/font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="?attr/colorAccent"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:drawableTint="?attr/colorAccent"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtCorreoNuevo"
                style="@style/font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textoApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="20233tnn094@utez.edu.mx"
                android:textColor="?attr/colorOnSurface"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/btnActualizarUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableTint="?attr/colorPrimary"
                android:gravity="center"
                android:text="@string/guardar"
                android:textSize="24sp"
                app:drawableLeftCompat="@android:drawable/ic_menu_save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>